--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+.doraemon {
+  font-size: 20px;
+  font-family: monospace;
+}
+</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<pre class="doraemon">
+     /\_/\
+    ( o.o )
+     > ^ <
+</pre>
+
 </body>
 </html>
