--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     "https://scholar.google.com/citations?hl=en&user=rUp_4RgAAAAJ"
   ],
   "knowsAbout": ["Machine Learning", "Deep Learning", "Large Language Models", "GUI Agents", "Diffusion Models", "Computer Vision", "Artificial Intelligence"],
-  "email": "lipengxiang@mail.dlut.edu.cn"
+  "email": "25026385r@connect.polyu.hk"
 }
 </script>
 
@@ -78,7 +78,7 @@
             <h3 class="title">Ph.D. Student @ PolyU</h3>
         </div>
         <div class="contact">
-            <a class="link" href="mailto:lipengxiang@mail.dlut.edu.cn" target="_blank">Email</a>
+            <a class="link" href="mailto:25026385r@connect.polyu.hk" target="_blank">Email</a>
                 &nbsp/&nbsp
             <a class="link" href="./CV/CV_Pengxiang_Li.pdf" target="_blank">CV</a>
                 &nbsp/&nbsp
