--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <div class="time">2022 - 2025 | Advisor: Prof. Huchuan Lu</div>
         </div>
         <div class="education-item">
-            <div class="degree">B.Eng. in Computer Science</div>
+            <div class="degree">B.Sc. in Geographic Information Systems</div>
             <div class="university">Dalian Maritime University</div>
             <div class="time">2018 - 2022</div>
         </div>
