--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 </head>
 
 <body>
+<script src="./js/publications.js"></script>
 <div class="wrapper">
 <section class="section intro-section">
     <div class="avatar-container">
@@ -130,152 +131,7 @@
         Selected Publications
     </div>
     <div class="publication-list">
-        
-        <div class="publication">
-            <div class="publication-info">
-                <h4 class="publication-title">
-                    InfiGUIAgent: A Multimodal Generalist GUI Agent with Native Reasoning and Reflection
-                </h4>
-                <p class="publication-authors">
-                    Y. Liu, <strong>P. Li</strong>, Z. Wei, C. Xie, X. Hu, X. Xu, S. Zhang, X. Han, H. Yang, F. Wu
-                </p>
-                <p class="publication-venue">arXiv 2025</p>
-                <p class="publication-desc">
-                    A multimodal generalist GUI agent that combines native reasoning and reflection capabilities for advanced GUI automation tasks.
-                </p>
-                <div class="publication-links">
-                    <a href="https://arxiv.org/abs/2501.04575" class="link-button" target="_blank">Paper</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="publication">
-            <div class="publication-info">
-                <h4 class="publication-title">
-                    InfiGUI-R1: Advancing Multimodal GUI Agents from Reactive Actors to Deliberative Reasoners
-                </h4>
-                <p class="publication-authors">
-                    Y. Liu, <strong>P. Li</strong>, C. Xie, X. Hu, X. Han, S. Zhang, H. Yang, F. Wu
-                </p>
-                <p class="publication-venue">arXiv 2025</p>
-                <p class="publication-desc">
-                    Transforms GUI agents from simple reactive systems to deliberative reasoners capable of complex planning and decision-making.
-                </p>
-                <div class="publication-links">
-                    <a href="https://arxiv.org/abs/2504.14239" class="link-button" target="_blank">Paper</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="publication">
-            <div class="publication-info">
-                <h4 class="publication-title">
-                    The Curse of Depth in Large Language Models
-                </h4>
-                <p class="publication-authors">
-                    W. Sun, X. Song, <strong>P. Li</strong>, L. Yin, Y. Zheng, S. Liu
-                </p>
-                <p class="publication-venue">arXiv 2025</p>
-                <p class="publication-desc">
-                    Investigates the depth scaling challenges in LLMs and proposes solutions for training deeper and more effective models.
-                </p>
-                <div class="publication-links">
-                    <a href="https://arxiv.org/abs/2502.05795" class="link-button" target="_blank">Paper</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="publication">
-            <div class="publication-info">
-                <h4 class="publication-title">
-                    Mix-LN: Unleashing the Power of Deeper Layers by Combining Pre-LN and Post-LN
-                </h4>
-                <p class="publication-authors">
-                    <strong>P. Li</strong>, L. Yin, S. Liu
-                </p>
-                <p class="publication-venue">ICLR 2025</p>
-                <p class="publication-desc">
-                    A novel layer normalization technique that combines Pre-LN and Post-LN to enable training of deeper and more powerful language models.
-                </p>
-                <div class="publication-links">
-                    <a href="#" class="link-button">Paper</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="publication">
-            <div class="publication-info">
-                <h4 class="publication-title">
-                    Automated Evaluation of Large Vision-Language Models on Self-driving Corner Cases
-                </h4>
-                <p class="publication-authors">
-                    K. Chen, Y. Li, W. Zhang, Y. Liu, <strong>P. Li</strong>, R. Gao, L. Hong, et al.
-                </p>
-                <p class="publication-venue">WACV 2025</p>
-                <p class="publication-desc">
-                    Comprehensive evaluation framework for VLMs in autonomous driving scenarios, addressing critical safety corner cases with 70% faster testing.
-                </p>
-                <div class="publication-links">
-                    <a href="#" class="link-button">Paper</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="publication">
-            <div class="publication-info">
-                <h4 class="publication-title">
-                    TrackDiffusion: Tracklet-Conditioned Video Generation via Diffusion Models
-                </h4>
-                <p class="publication-authors">
-                    <strong>P. Li</strong>, K. Chen, Z. Liu, R. Gao, L. Hong, G. Zhou, H. Yao, D.Y. Yeung, H. Lu, et al.
-                </p>
-                <p class="publication-venue">WACV 2025</p>
-                <p class="publication-desc">
-                    First diffusion-based approach for tracklet-conditioned video generation, enabling controllable multi-object tracking data synthesis.
-                </p>
-                <div class="publication-links">
-                    <a href="https://arxiv.org/abs/2312.00651" class="link-button" target="_blank">Paper</a>
-                    <a href="https://github.com/pixeli99/TrackDiffusion" class="link-button" target="_blank">Code</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="publication">
-            <div class="publication-info">
-                <h4 class="publication-title">
-                    Outlier-weighted Layerwise Sampling for LLM Fine-tuning
-                </h4>
-                <p class="publication-authors">
-                    <strong>P. Li</strong>, L. Yin, X. Gao, S. Liu
-                </p>
-                <p class="publication-venue">ACL 2025 Findings</p>
-                <p class="publication-desc">
-                    Novel fine-tuning approach that leverages outlier weights for more efficient and effective LLM adaptation.
-                </p>
-                <div class="publication-links">
-                    <a href="#" class="link-button">Paper</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="publication">
-            <div class="publication-info">
-                <h4 class="publication-title">
-                    MoTrans: Customized Motion Transfer with Text-driven Video Diffusion Models
-                </h4>
-                <p class="publication-authors">
-                    X. Li, X. Jia, Q. Wang, H. Diao, M. Ge, <strong>P. Li</strong>, Y. He, H. Lu
-                </p>
-                <p class="publication-venue">ACM MM 2024</p>
-                <p class="publication-desc">
-                    Text-driven customized motion transfer framework using video diffusion models for controllable animation generation.
-                </p>
-                <div class="publication-links">
-                    <a href="#" class="link-button">Paper</a>
-                </div>
-            </div>
-        </div>
-
+        <!-- Publications will be dynamically loaded here by JavaScript -->
     </div>
 </section>
 
