--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         About Me
     </div>
     <div class="details">
-        <p> I am currently a Ph.D. student at The Hong Kong Polytechnic University. 
+        <p> I am currently a Ph.D. student at The Hong Kong Polytechnic University under the supervision of <a href="https://www4.comp.polyu.edu.hk/~hongxyang/" target="_blank">Prof. Hongxia Yang</a>.
         Previously, I obtained my MSc from Dalian University of Technology under the supervision of <a href="https://scholar.google.com/citations?user=D3nE0agAAAAJ" target="_blank">Prof. Huchuan Lu</a>. 
         My research focuses on Large Language Models, Multimodal GUI Agents, and Diffusion Models for Video Generation.
         </p>
